Archive2/e2/a25d7ba509c93d/output
main.cpp:2:16: error: expected unqualified-id before '[' token
     static char[] = { 'F', 'O', 'O' };
                ^
main.cpp:3:1: error: expected ';' after class definition
 }
 ^
