Archive2/e2/a25d7ba509c93d/main.cpp
class foo {
    static char[] = { 'F', 'O', 'O' };
}

int main() {}